# turbotopics

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING-MODELS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  docs.yml  release.yml
api/diagnostics/: index.html
api/embedding/: index.html
api/keyatm/: index.html
api/keywords/: index.html
api/models/: index.html
api/stm/: index.html
api/viz/: index.html
benchmarks/: README_bench.md  bench.py  bench_scaling.py  bench_stm.py  export_poliblog5k.R  index.html  k_crossover.py  scaling_results.json  speed_vs_r.py  speed_vs_size.py
can-do/: index.html
citing/: index.html
contributing/conventions/: index.html
contributing/estimator-contract/: index.html
docs/: benchmarks.md  citing.md  index.md  requirements.txt
docs/api/: diagnostics.md  embedding.md  keyatm.md  keywords.md  models.md  stm.md  viz.md
docs/can-do/: index.md
docs/contributing/: conventions.md  estimator-contract.md
docs/examples/: dubois.md  gadarian.md  llm-topics.md  poliblog.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: covariates.md  diagnostics.md  embedding.md  guided.md  keywords.md  models.md  preprocessing.md  short-text.md  transform.md  uncertainty.md  visualization.md
docs/publishing/: choosing-k.md  choosing-model.md  corpus.md  effects.md  index.md  reporting.md  validation.md
docs/replications/: index.md  keyatm-dynamic.md  stm.md
docs/stylesheets/: extra.css
examples/: bertopic_best_practices.py  dubois_crisis.csv  dubois_tutorial.ipynb  dubois_tutorial.py  english-stoplist.txt  gadarian.csv  llm_topics.py  plot_report_example.py  poliblog.csv  quickstart.py  sample-docs.txt  stm_vignette.py
examples/dubois/: index.html
examples/gadarian/: index.html
examples/llm-topics/: index.html
examples/poliblog/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/covariates/: index.html
guides/diagnostics/: index.html
guides/embedding/: index.html
guides/guided/: index.html
guides/keywords/: index.html
guides/models/: index.html
guides/preprocessing/: index.html
guides/short-text/: index.html
guides/transform/: index.html
guides/uncertainty/: index.html
guides/visualization/: index.html
notes/: default-parity-testing-note.md  model-parity-validation-todo.md
paper/: .gitignore  ARXIV.md  README.md  computational_details.py  make_arxiv.sh  make_figures.py  replication.py  sampler-backends-notes.tex  topica.bib  topica.tex
parity/: DMRDriver.java  LabeledLDADriver.java  coherence_gensim_compare.py  ctm_r_compare.py  ensemblelda_gensim_compare.py  fastopic_compare.py  keyatm_models_r_compare.py  keyatm_r_compare.py  mallet_parity.py  prodlda_compare.py  stm_content_r_compare.py  stm_poliblog_compare.py  stm_r_compare.py  sts_r_compare.py  test_gdmr_tomotopy.py  top2vec_compare.py
publishing/: index.html
publishing/choosing-k/: index.html
publishing/choosing-model/: index.html
publishing/corpus/: index.html
publishing/effects/: index.html
publishing/reporting/: index.html
publishing/validation/: index.html
python/topica/: __init__.py  __init__.pyi  _topica.pyi  analysis.py  coherence.py  conformance.py  diagnostics.py  dynamics.py  effects.py  embedding.py  ensemble.py  formulas.py  frames.py  gdmr.py  keyatm.py  keywords.py  labeling.py  phrases.py  report.py  stm.py  stopwords.py  validation.py
python/topica/viz/: __init__.py  base.py  capability.py  content.py  correlation.py  dashboard.py  effect.py  embedding_map.py  groups.py  health.py  inspector.py  permtest.py  prevalence.py  quality.py  temporal.py  terms.py
python/turbotopics/: __init__.py  __init__.pyi  _turbotopics.pyi  coherence.py  diagnostics.py  keywords.py  phrases.py  preprocess.py  stm.py
replications/: index.html
replications/keyatm-dynamic/: index.html
replications/stm/: index.html
search/: search_index.json
src/: bertopic.rs  cluster.rs  coherence.rs  conformance.rs  corpus.rs  ctm.rs  cvb0.rs  dmr.rs  dtm.rs  estimator.rs  etm.rs  etm_vae.rs  fastopic.rs  gsdmm.rs  hdp.rs  hlda.rs  keyatm.rs  labeled.rs  lib.rs  lightlda.rs  linalg.rs  mh.rs  model.rs  optimize.rs  output.rs  pa.rs  prodlda.rs  pt.rs  python.rs  reduce.rs  represent.rs  sage.rs  sampler.rs  saveformat.rs  seeded.rs  slda.rs  spectral.rs  sts.rs  top2vec.rs  warplda.rs
src/variational/: laplace.rs  lbfgs.rs  mod.rs  mstep.rs  sparse.rs
tests/: conftest.py  test_behavioral_117.py  test_cli_parity.py  test_coherence.py  test_coherence_fast.py  test_conformance.py  test_convergence_interface.py  test_corpus.py  test_css_extras.py  test_ctm.py  test_cvb0.py  test_design_helpers_toplevel.py  test_determinism.py  test_diagnostics.py  test_diagnostics_table.py  test_diagonal_variational.py  test_dmr.py  test_doc_lengths.py  test_dtm.py  test_dubois_tutorial.py  test_dynamics.py  test_effects_promotion.py  test_embedding_lda.py  test_embedding_merge_outliers.py  test_embedding_save_load.py  test_embedding_transform.py  test_ensemble.py  test_estimate_effect_moc.py  test_etm.py  test_extra_models.py  test_fastopic.py  test_fit_stats.py  test_formulas.py  test_frames.py  test_gdmr.py  test_gsdmm.py  test_guided_models.py  test_hdp.py  test_heldout.py  test_inference.py  (+65 more)
