[package]
name = "topica"
version = "0.15.0"
edition = "2021"

[lib]
name = "topica"
path = "src/lib.rs"
# cdylib: Python extension module (maturin). rlib: keep the four CLI binaries linkable.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"

[[bin]]
name = "analyze"
path = "src/bin/analyze.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "show"
path = "src/bin/show.rs"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
rand_pcg = "0.3"
regex = "1"
# Serialization for model save/load (pickle via __getstate__/__setstate__).
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Python-binding deps live behind the `python` feature so plain `cargo build`
# (and the CLI binaries) never pull in pyo3/numpy.
pyo3 = { version = "0.22", features = ["abi3-py39"], optional = true }
numpy = { version = "0.22", optional = true }
# gzip for LDA.save_state (MALLET --output-state .gz); python-binding only.
flate2 = { version = "1", optional = true }
# Embedding-native model branch (Top2Vec/BERTopic/ETM/...), behind the
# `embeddings` feature so the lean core build never pulls them in.
# petal-clustering supplies HDBSCAN/DBSCAN (BLAS-free); ndarray 0.17 is its
# matrix type (numpy 0.22 carries ndarray 0.16, so we bridge via raw f64 data).
petal-clustering = { version = "0.13", optional = true }
ndarray = { version = "0.17", optional = true }
# Faithful UMAP reducer (wilsonzlin/umap-rs): pure Rust, BLAS-free, ndarray 0.17
# (same version as petal-clustering). Behind the `umap` feature so the default
# embedding build keeps the BLAS-free randomized-PCA reducer.
umap-rs = { version = "0.4", optional = true }
# Barnes-Hut t-SNE (frjnn/bhtsne): pure Rust, rayon-parallel, BLAS-free. Behind
# the `tsne` feature; the shipped wheel enables it so `viz.document_map` and
# `topica.project` offer method="tsne". The fit is stochastic (bhtsne exposes no
# seed), so it is the non-reproducible neighbor-preserving option, like UMAP.
bhtsne = { version = "0.5", optional = true }
# rayon parallelizes the variational E-step (ctm.rs) and the LDA sweep
# (python.rs); kept non-optional so the parallel path compiles and is exercised
# by the default `cargo test` build, not only under the `python` feature.
rayon = "1"

[features]
# maturin enables this (see pyproject.toml -> [tool.maturin] features).
# `python` implies `embeddings` (so the bindings expose the embedding models) and
# `umap` (so the shipped wheel offers `reducer="umap"`); both also build/test
# standalone (`cargo test --features embeddings`).
python = ["dep:pyo3", "dep:numpy", "dep:flate2", "pyo3/extension-module", "embeddings", "umap", "tsne"]
# The embedding-native model branch (clustering pipeline + numerical models).
embeddings = ["dep:petal-clustering", "dep:ndarray"]
# Faithful UMAP reducer for the embedding models. PCA stays the default reducer;
# UMAP's discovery fit is stochastic (the umap-rs optimizer's negative sampling is
# unseeded), while the transform / prediction phase is deterministic regardless.
umap = ["embeddings", "dep:umap-rs"]
# Barnes-Hut t-SNE projection (frjnn/bhtsne), exposed via `topica.project` and the
# `viz.document_map` panel. Independent of the embedding models, so it stands alone.
tsne = ["dep:bhtsne"]

# Whole-program optimization for the shipped wheels and CLI binaries.
# lto + a single codegen unit let the optimizer inline across the sampler's
# module boundaries (sampler/model/corpus); results stay bit-identical.
# (No panic="abort": pyo3 relies on unwinding to turn Rust panics into Python
# exceptions rather than aborting the interpreter.)
[profile.release]
lto = true
codegen-units = 1
