[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "topica"
version = "0.16.0"
description = "Topica: fast, all-purpose topic modeling for Python — a Rust core for LDA, STM, and more"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Neal Caren" }]
keywords = ["topic-modeling", "lda", "stm", "nlp", "text-analysis", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = ["numpy>=1.21"]

[project.urls]
Homepage = "https://nealcaren.github.io/topica/"
Repository = "https://github.com/nealcaren/topica"
Documentation = "https://nealcaren.github.io/topica/"

[project.optional-dependencies]
# R-style formula interface (topica.design_matrix, estimate_effect(formula=...)).
formula = ["formulaic>=0.6", "pandas>=1.3"]
# Polars DataFrames/Series anywhere pandas is accepted (from_dataframe, align,
# design_matrix). The DataFrame is not the cost center, so this is a convenience,
# not a speedup.
polars = ["polars>=0.20"]
# Optional adapter for LLM labeling and embeddings (topica.llm_backend /
# llm_embed). The core (llm_topic_labels with call=..., or your own embeddings)
# takes any callable/array and needs nothing. This extra adds `llm` plus the
# ollama plugin, so OpenAI works out of the box (set OPENAI_API_KEY) and a fully
# local, torch-free path runs through ollama (both chat and embedding models).
# Local sentence-transformer embeddings additionally need `llm-sentence-transformers`.
llm = ["llm>=0.13", "llm-ollama"]
# The visualization toolkit (topica.viz), static and interactive in one extra:
# matplotlib for .to_png(), pandas for every panel's .to_frame(), scipy to seriate
# the similarity heatmap (degrades gracefully if absent), and plotly (WebGL) as the
# single interactive .to_html() backend.
viz = ["matplotlib>=3.4", "pandas>=1.3", "scipy>=1.7", "plotly>=5"]
# Everything, for a one-shot install.
all = ["formulaic>=0.6", "pandas>=1.3", "polars>=0.20", "llm>=0.13", "llm-ollama",
       "matplotlib>=3.4", "scipy>=1.7", "plotly>=5"]
test = ["pytest>=7", "pandas>=1.3", "formulaic>=0.6", "matplotlib>=3.4", "scipy>=1.7", "plotly>=5"]

[tool.maturin]
# Mixed Rust/Python layout: pure-Python wrapper in python/, compiled ext as topica._topica.
python-source = "python"
module-name = "topica._topica"
features = ["python"]
# Build a single abi3 wheel per platform (works on CPython >=3.9).
